# PlantGuide

./: .gitignore  CONTRIBUTING.md  README.md  SPECIES.md  ai_solution.py  create_pr.py  pyproject.toml
data/: diseases.json
data/disease/: symptom_rules.json
data/observations/: 2_drought_tolerant_outdoor_herbs_care.json  adenium_obesum.json  alocasia_zebrina.json  aloe_vera.json  areca_palm.json  asparagus_setaceus.json  aspidistra_elatior.json  avocado_seedling.json  bamboo_lucky_clumping.json  banana_musa.json  bird_of_paradise.json  bitter_melon.json  bougainvillea.json  bromeliad_guzmania.json  cactus_echinopsis.json  cactus_gymnocalycium.json  calathea_orbifolia.json  chili_bird_eye.json  chlorophytum_comosum.json  chlorophytum_comosum_vittatum.json  citrus_calamansi.json  coconut_seedling.json  codiaeum_variegatum.json  coffee_arabica_house.json  coleus.json  colocasia_esculenta.json  cordyline_fruticosa.json  crassula_ovata.json  cucumber_vine.json  eggplant_purple.json  (+55 more)
docs/: BOUNTY.md  ROADMAP.md  SOLUTIONS_50_mrg_app_sdk_json_schem.md  WATERING_SCHEDULE.md  arid-climate-species.md  dataset-index.md  species-photo-evidence.md  toxicity-filter-cli.md  vietnamese-care-tips.md  watering-calendar-export.md
mobile/: App.js
schemas/: assess-for-app.schema.json  care_card.schema.json  identify_response.schema.json  observation.schema.json  species.schema.json
scripts/: create-bounties.mjs  create-species-photo-bounties.mjs  gen_i18n_guides.py  generate_demo_photos.py  pr_maintainer_loop.mjs  train_photo_id.py
src/: cli.py  filters.py  web_demo.py
tests/: test_api.py  test_app_report.py  test_care.py  test_care_filtering.py  test_care_planner.py  test_cli.py  test_collection.py  test_disease.py  test_disease_matcher.py  test_eval.py  test_explain_scores.py  test_filters.py  test_identify.py  test_metrics.py  test_photo_identify.py  test_ranking.py  test_schemas.py  test_sdk.py  test_toxicity.py  test_toxicity_filter.py  test_train.py  test_watering_ics.py  test_watering_schedule.py  test_web_demo.py
web/: README.md  index.html  script.js  styles.css
(+295 files in other folders)
