[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plantguide"
version = "0.2.8"
description = "PlantGuide: photo/tag plant ID + per-species care cards (offline demo vision)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MergeOS / ThanhTrucSolutions" }]
keywords = ["plants", "botany", "identification", "care", "gardening", "vision", "photo"]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "numpy>=1.26",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
torch = [
  "torch>=2.2",
]
vision = [
  "Pillow>=10.0",
  "opencv-python-headless>=4.9",
]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.scripts]
plantguide = "plantguide.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
